--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Archeology-of-the-lower-Mimbres-valley-New-Mexico_70601
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70601-h/images/cover.jpg
 creator:
   author:
     agent_name: Fewkes, Jesse Walter
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/7741
     wikipedia: https://en.wikipedia.org/wiki/Jesse_Walter_Fewkes
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70601#Archeology-of-the-lower-Mimbres-valley-New-Mexico
 gutenberg_issued: '2023-04-20'
 identifiers:
   gutenberg: '70601'
